# squirrel

./: .gitignore  concepts.ipynb  content.ipynb  identifiers.ipynb  initial.mysql-notebook  main.py  mysql.ipynb  new.ipynb  pyproject.toml  request.ipynb
data/templates/: address.template.yaml  name.template.yaml  people.template.yaml  person.template.yaml  user.template.yaml
src/: __init__.py  asset.py  assets.py  catalog.py  dictionaries.py  env_vars.py  roles.py  sys_paths.py  users.py  validate.py  ws.py
